--- a/src/i18n/translations/fa-AF.json
+++ b/src/i18n/translations/fa-AF.json
@@ -129,7 +129,47 @@
     "lastCheck": "آخرین معاینه",
     "symptomsInput": "علایم خود را وارد کنید...",
     "analyzing": "در حال تحلیل علایم شما...",
-    "noSymptoms": "لطفاً علایم خود را وارد کنید"
+    "noSymptoms": "لطفاً علایم خود را وارد کنید",
+    "header": {
+      "title": "خانه"
+    },
+    "widgets": {
+      "healthStatus": {
+        "title": "وضعیت صحی",
+        "excellent": "عالی",
+        "excellentDesc": "اندازه گیری های صحی شما در حد مطلوب است",
+        "good": "خوب",
+        "goodDesc": "صحت شما در وضعیت خوبی قرار دارد",
+        "fair": "متوسط",
+        "fairDesc": "بعضی از اندازه گیری ها نیاز به توجه دارند",
+        "poor": "ضعیف",
+        "poorDesc": "چندین اندازه گیری نیاز به توجه دارند",
+        "heartRate": "ضربان قلب",
+        "bloodPressure": "فشار خون",
+        "sleep": "خواب",
+        "bpm": "ضربان در دقیقه",
+        "mmHg": "میلی متر جیوه",
+        "hrs": "ساعت"
+      },
+      "stepsTracker": {
+        "title": "قدم های روزانه",
+        "history": "تاریخچه",
+        "steps": "قدم",
+        "goal": "هدف: {{goal}} قدم",
+        "distance": "مسافت",
+        "calories": "کالری",
+        "progress": "پیشرفت",
+        "km": "کیلومتر",
+        "kcal": "کالری"
+      }
+    },
+    "actions": {
+      "startAnalysis": "شروع تحلیل علایم جدید"
+    },
+    "recentSymptoms": {
+      "title": "علایم اخیر",
+      "empty": "هیچ علایم اخیری ثبت نشده است"
+    }
   },
   "appointments": {
     "upcoming": "ملاقات‌های پیش رو",
@@ -165,11 +205,11 @@
     "save": "ذخیره",
     "cancel": "لغو",
     "next": "بعدی",
-    "back": "قبلی",
+    "back": "برگشت",
     "done": "انجام شد",
-    "error": "خطایی رخ داد",
-    "success": "موفقیت‌آمیز",
-    "loading": "در حال بارگیری...",
+    "error": "خطا",
+    "success": "موفق",
+    "loading": "در حال بارگذاری...",
     "yes": "بلی",
     "no": "نخیر",
     "ok": "تایید",
@@ -179,7 +219,10 @@
     "search": "جستجو",
     "select": "انتخاب",
     "submit": "ارسال",
-    "retry": "تلاش مجدد"
+    "retry": "تلاش مجدد",
+    "warning": "هشدار",
+    "info": "معلومات",
+    "details": "جزئیات"
   },
   "auth": {
     "welcome": {
@@ -330,5 +373,10 @@
       "position": "تغییر وضعیت",
       "other": "سایر"
     }
+  },
+  "splash": {
+    "appTitle": "AICura™",
+    "tagline": "همراه هوشمند صحی شما",
+    "loading": "در حال بارگذاری..."
   }
 }
