--- a/src/i18n/translations/ps.json
+++ b/src/i18n/translations/ps.json
@@ -129,7 +129,47 @@
     "lastCheck": "وروستۍ معاینه",
     "symptomsInput": "خپلې نښې ولیکئ...",
     "analyzing": "ستاسو نښې تحلیلوي...",
-    "noSymptoms": "مهرباني وکړئ خپلې نښې ولیکئ"
+    "noSymptoms": "مهرباني وکړئ خپلې نښې ولیکئ",
+    "header": {
+      "title": "کور"
+    },
+    "widgets": {
+      "healthStatus": {
+        "title": "د روغتیا حالت",
+        "excellent": "ډیر ښه",
+        "excellentDesc": "ستاسو د روغتیا اندازې غوره دي",
+        "good": "ښه",
+        "goodDesc": "ستاسو روغتیا په ښه حالت کې ده",
+        "fair": "منځنی",
+        "fairDesc": "ځینې اندازې پاملرنې ته اړتیا لري",
+        "poor": "کمزوری",
+        "poorDesc": "ډیری اندازې پاملرنې ته اړتیا لري",
+        "heartRate": "د زړه ضربان",
+        "bloodPressure": "د وینې فشار",
+        "sleep": "خوب",
+        "bpm": "بي پي ایم",
+        "mmHg": "ایم ایم ایچ جي",
+        "hrs": "ساعته"
+      },
+      "stepsTracker": {
+        "title": "ورځني ګامونه",
+        "history": "تاریخچه",
+        "steps": "ګامونه",
+        "goal": "موخه: {{goal}} ګامونه",
+        "distance": "واټن",
+        "calories": "کالوري",
+        "progress": "پرمختګ",
+        "km": "کیلومتر",
+        "kcal": "کالوري"
+      }
+    },
+    "actions": {
+      "startAnalysis": "د نوي نښو تحلیل پیل کړئ"
+    },
+    "recentSymptoms": {
+      "title": "وروستۍ نښې",
+      "empty": "هیڅ وروستۍ نښې نه دي ثبت شوي"
+    }
   },
   "appointments": {
     "upcoming": "راتلونکې لیدنې",
@@ -162,24 +202,27 @@
     "delete": "له منځه وړل"
   },
   "common": {
-    "save": "ساتل",
-    "cancel": "لغوه کول",
+    "save": "خوندي کړئ",
+    "cancel": "لغوه کړئ",
     "next": "راتلونکی",
     "back": "شاته",
-    "done": "ترسره شو",
-    "error": "تېروتنه رامنځته شوه",
-    "success": "بریالی شو",
-    "loading": "په حال کې...",
+    "done": "بشپړ شو",
+    "error": "تېروتنه",
+    "success": "بریالی",
+    "loading": "په بارېدو کې...",
     "yes": "هو",
     "no": "نه",
     "ok": "سمه ده",
-    "confirm": "تایید",
-    "delete": "له منځه وړل",
-    "edit": "سمول",
+    "confirm": "تایید کړئ",
+    "delete": "ړنګ کړئ",
+    "edit": "سمون",
     "search": "لټون",
-    "select": "غوره کول",
-    "submit": "لېږل",
-    "retry": "بیا هڅه وکړئ"
+    "select": "غوره کړئ",
+    "submit": "وسپارئ",
+    "retry": "بیا هڅه وکړئ",
+    "warning": "خبرداری",
+    "info": "معلومات",
+    "details": "جزئیات"
   },
   "auth": {
     "welcome": {
@@ -330,5 +373,10 @@
       "position": "د حالت بدلون",
       "other": "نور"
     }
+  },
+  "splash": {
+    "appTitle": "AICura™",
+    "tagline": "ستاسو هوښیار روغتیایي ملګری",
+    "loading": "په بارېدو کې..."
   }
 }
