--- a/src/i18n/translations/ur.json
+++ b/src/i18n/translations/ur.json
@@ -129,7 +129,47 @@
     "lastCheck": "آخری چیک اپ",
     "symptomsInput": "اپنی علامات درج کریں...",
     "analyzing": "آپ کی علامات کا تجزیہ کیا جا رہا ہے...",
-    "noSymptoms": "براہ کرم اپنی علامات درج کریں"
+    "noSymptoms": "براہ کرم اپنی علامات درج کریں",
+    "header": {
+      "title": "ہوم"
+    },
+    "widgets": {
+      "healthStatus": {
+        "title": "صحت کی حالت",
+        "excellent": "بہترین",
+        "excellentDesc": "آپ کی صحت کی پیمائش بہترین ہے",
+        "good": "اچھی",
+        "goodDesc": "آپ کی صحت اچھی حالت میں ہے",
+        "fair": "معمولی",
+        "fairDesc": "کچھ پیمائشوں پر توجہ کی ضرورت ہے",
+        "poor": "خراب",
+        "poorDesc": "کئی پیمائشوں پر توجہ کی ضرورت ہے",
+        "heartRate": "دل کی دھڑکن",
+        "bloodPressure": "بلڈ پریشر",
+        "sleep": "نیند",
+        "bpm": "بی پی ایم",
+        "mmHg": "ایم ایم ایچ جی",
+        "hrs": "گھنٹے"
+      },
+      "stepsTracker": {
+        "title": "روزانہ کے اقدامات",
+        "history": "تاریخ",
+        "steps": "اقدامات",
+        "goal": "ہدف: {{goal}} اقدامات",
+        "distance": "فاصلہ",
+        "calories": "کیلوریز",
+        "progress": "پیش رفت",
+        "km": "کلومیٹر",
+        "kcal": "کیلوریز"
+      }
+    },
+    "actions": {
+      "startAnalysis": "نئی علامات کی تجزیہ شروع کریں"
+    },
+    "recentSymptoms": {
+      "title": "حالیہ علامات",
+      "empty": "کوئی حالیہ علامات درج نہیں"
+    }
   },
   "appointments": {
     "upcoming": "آنے والی اپائنٹمنٹس",
@@ -165,9 +205,9 @@
     "save": "محفوظ کریں",
     "cancel": "منسوخ کریں",
     "next": "اگلا",
-    "back": "پیچھے",
+    "back": "واپس",
     "done": "مکمل",
-    "error": "کوئی خرابی پیش آگئی",
+    "error": "خرابی",
     "success": "کامیاب",
     "loading": "لوڈ ہو رہا ہے...",
     "yes": "ہاں",
@@ -179,7 +219,10 @@
     "search": "تلاش کریں",
     "select": "منتخب کریں",
     "submit": "جمع کرائیں",
-    "retry": "دوبارہ کوشش کریں"
+    "retry": "دوبارہ کوشش کریں",
+    "warning": "انتباہ",
+    "info": "معلومات",
+    "details": "تفصیلات"
   },
   "auth": {
     "welcome": {
@@ -330,5 +373,10 @@
       "position": "پوزیشن تبدیلی",
       "other": "دیگر"
     }
+  },
+  "splash": {
+    "appTitle": "AICura™",
+    "tagline": "آپ کا ذہین صحت کا ساتھی",
+    "loading": "لوڈ ہو رہا ہے..."
   }
 }
