Enhance symptom reporting and analysis features with new components and translations
- Added new SVG icons for diagnosis, symptoms, and treatment to improve visual representation.
- Introduced `SymptomDescriptionStep` for detailed symptom input, enhancing user interaction.
- Updated `Wizard` component to support swipe gestures for smoother navigation between steps.
- Refactored `SymptomLocationStep` to utilize a body map for selecting affected areas, improving user experience.
- Integrated new AI services for symptom analysis and suggestions, enhancing functionality.
- Updated translations for symptom reporting in multiple languages, ensuring clarity and consistency.
- Removed deprecated Norwegian translations and replaced them with updated Norwegian (nb) translations for better localization.

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -167,7 +167,33 @@
   "journal": {
     "title": "السجل الطبي",
     "newEntry": "إدخال جديد",
-    "symptoms": "الأعراض",
+    "symptoms": {
+      "bodyMap": {
+        "frontView": "منظر أمامي",
+        "backView": "منظر خلفي",
+        "commonSymptoms": "الأعراض الشائعة",
+        "bodyParts": {
+          "head": "الرأس",
+          "neck": "الرقبة",
+          "chest": "الصدر",
+          "abdomen": "البطن",
+          "leftUpperArm": "الذراع العلوي الأيسر",
+          "rightUpperArm": "الذراع العلوي الأيمن",
+          "leftLowerArm": "الذراع السفلي الأيسر",
+          "rightLowerArm": "الذراع السفلي الأيمن",
+          "leftUpperLeg": "الفخذ الأيسر",
+          "rightUpperLeg": "الفخذ الأيمن",
+          "leftLowerLeg": "الساق اليسرى",
+          "rightLowerLeg": "الساق اليمنى",
+          "headBack": "مؤخرة الرأس",
+          "neckBack": "مؤخرة الرقبة",
+          "upperBack": "أعلى الظهر",
+          "lowerBack": "أسفل الظهر",
+          "leftButtock": "الألية اليسرى",
+          "rightButtock": "الألية اليمنى"
+        }
+      }
+    },
     "medications": "الأدوية",
     "mood": "المزاج",
     "notes": "الملاحظات",
