--- a/src/i18n/translations/fa-AF.json
+++ b/src/i18n/translations/fa-AF.json
@@ -322,15 +322,15 @@
       },
       "context": {
         "title": "عوامل محیطی",
-        "description": "اطلاعات در مورد سبک زندگی و محیط شما"
+        "description": "به ما کمک کنید تا محیط و سبک زندگی شما را درک کنیم"
       },
       "complications": {
         "title": "عوارض",
-        "description": "علایم اضافی یا نگرانی‌ها"
+        "description": "علایم اضافی یا عوارض"
       },
       "summary": {
         "title": "خلاصه",
-        "description": "اطلاعات ارائه شده را مرور کنید"
+        "description": "گزارش علایم خود را مرور کنید"
       }
     },
     "bodyPart": {
