--- a/src/i18n/translations/ps.json
+++ b/src/i18n/translations/ps.json
@@ -322,15 +322,15 @@
       },
       "context": {
         "title": "شاوخوا عوامل",
-        "description": "ستاسو د ژوند طرز او چاپیریال په اړه معلومات"
+        "description": "موږ سره مرسته وکړئ چې ستاسو چاپیریال او د ژوند طریقه وپیژنو"
       },
       "complications": {
         "title": "اضافي ستونزې",
-        "description": "اضافي نښې یا اندیښنې"
+        "description": "نورې نښې یا پیچلتیاوې"
       },
       "summary": {
         "title": "لنډیز",
-        "description": "ورکړل شوي معلومات وګورئ"
+        "description": "د خپلو نښو راپور وګورئ"
       }
     },
     "bodyPart": {
