--- a/src/i18n/translations/ur.json
+++ b/src/i18n/translations/ur.json
@@ -322,15 +322,15 @@
       },
       "context": {
         "title": "متعلقہ عوامل",
-        "description": "آپ کے طرز زندگی اور ماحول کے بارے میں معلومات"
+        "description": "ہمیں اپنے ماحول اور طرز زندگی کو سمجھنے میں مدد کریں"
       },
       "complications": {
         "title": "پیچیدگیاں",
-        "description": "اضافی علامات یا تشویشات"
+        "description": "اضافی علامات یا پیچیدگیاں"
       },
       "summary": {
         "title": "خلاصہ",
-        "description": "فراہم کردہ معلومات کا جائزہ لیں"
+        "description": "اپنی علامات کی رپورٹ کا جائزہ لیں"
       }
     },
     "bodyPart": {
