Refactor application branding and enhance configuration for improved user experience
- Renamed application from 'HealthcareApp' to 'AICura' in app.config.js and app.json for better branding.
- Updated package.json and package-lock.json to reflect new application name and improved dependency versions.
- Enhanced TypeScript configuration in tsconfig.json with additional path mappings for better module resolution.
- Refactored various components to utilize new asset paths and improved accessibility features.
- Integrated new plugins and dependencies for enhanced functionality and user interaction.
- Updated translations for symptom reporting and navigation to ensure clarity and consistency across languages.

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -220,7 +220,24 @@
     "search": "بحث",
     "select": "اختيار",
     "submit": "إرسال",
-    "retry": "إعادة المحاولة"
+    "retry": "إعادة المحاولة",
+    "navigation": {
+      "next": "التالي",
+      "back": "رجوع",
+      "finish": "إنهاء",
+      "swipeHint": "اسحب يميناً/يساراً للتنقل بين الخطوات",
+      "hideHint": "إخفاء التلميح",
+      "stepCount": "الخطوة {{current}}/{{total}}"
+    },
+    "accessibility": {
+      "nextStep": "الانتقال إلى الخطوة التالية",
+      "previousStep": "الرجوع إلى الخطوة السابقة",
+      "goToStep": "الانتقال إلى الخطوة {{number}}",
+      "closeHint": "إغلاق تلميح التنقل",
+      "changeLanguage": "تغيير اللغة",
+      "toggleTheme": "تبديل الوضع المظلم",
+      "back": "رجوع"
+    }
   },
   "auth": {
     "welcome": {
@@ -305,6 +322,36 @@
       "loginFailed": "فشل تسجيل الدخول. يرجى المحاولة مرة أخرى.",
       "signupFailed": "فشل إنشاء الحساب. يرجى المحاولة مرة أخرى.",
       "networkError": "خطأ في الشبكة. يرجى التحقق من اتصالك."
+    }
+  },
+  "symptoms": {
+    "steps": {
+      "description": {
+        "title": "وصف الأعراض",
+        "subtitle": "أخبرنا عما يزعجك",
+        "searchPlaceholder": "ابحث أو صف أعراضك...",
+        "searchHint": "اكتب أو استخدم الإدخال الصوتي لوصف أعراضك",
+        "emptyState": {
+          "title": "وصف الأعراض",
+          "subtitle": "اكتب أو استخدم الإدخال الصوتي لوصف ما يزعجك"
+        },
+        "voiceInput": {
+          "start": "انقر لبدء الإدخال الصوتي",
+          "stop": "انقر لإيقاف التسجيل",
+          "recording": "جاري التسجيل...",
+          "error": "تعذر معالجة الإدخال الصوتي"
+        },
+        "suggestions": {
+          "title": "الأعراض المقترحة",
+          "loading": "جاري البحث عن الأعراض المطابقة...",
+          "noResults": "لم يتم العثور على اقتراحات",
+          "error": "خطأ في تحميل الاقتراحات"
+        },
+        "actions": {
+          "add": "إضافة {{symptom}}",
+          "remove": "إزالة {{symptom}}"
+        }
+      }
     }
   }
 }
